--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -1,6 +1,6 @@
 .banner {
   background-image: url("../../images/banner.jpg");
-  height: 30em;
+  height: 100vh;
   width: 100%;
   background-size: cover;
   background-position: center;
